[gd_scene load_steps=22 format=3 uid="uid://d5h5hn0sd18l"]

[ext_resource type="PackedScene" uid="uid://d3fdd3hdc7p1q" path="res://enemies/enemy.tscn" id="1_w5osf"]
[ext_resource type="Script" path="res://enemies/mission1_enemies/mini_nova/vault_mini_nova.gd" id="2_lo3cl"]
[ext_resource type="Texture2D" uid="uid://dlcif67f5cepq" path="res://assets/mision1/enemies/Enemies T1 Sprite Sheet.png" id="2_wwe88"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="4_2dgjk"]
[ext_resource type="Script" path="res://components/move_component.gd" id="5_tbifn"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="6_qg7qm"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_fmhu6"]
[ext_resource type="PackedScene" uid="uid://jiet7nr76dj4" path="res://enemies/mission1_enemies/mini_nova/laser_mini_nova.tscn" id="8_ppyc4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4lew"]
atlas = ExtResource("2_wwe88")
region = Rect2(96, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f6kk"]
atlas = ExtResource("2_wwe88")
region = Rect2(128, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oga4x"]
atlas = ExtResource("2_wwe88")
region = Rect2(160, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmlk2"]
atlas = ExtResource("2_wwe88")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5pry"]
atlas = ExtResource("2_wwe88")
region = Rect2(32, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7af3"]
atlas = ExtResource("2_wwe88")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub4ej"]
atlas = ExtResource("2_wwe88")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu412"]
atlas = ExtResource("2_wwe88")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxb2q"]
atlas = ExtResource("2_wwe88")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlm8b"]
atlas = ExtResource("2_wwe88")
region = Rect2(96, 320, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bprv1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4lew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f6kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oga4x")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmlk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5pry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7af3")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub4ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu412")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxb2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlm8b")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rna0h"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ntlra"]
radius = 4.12311

[node name="VaultMiniNova" instance=ExtResource("1_w5osf")]
script = ExtResource("2_lo3cl")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_bprv1")
animation = &"bank_left"

[node name="StatsComponent" parent="." index="1"]
health = 10

[node name="HurtboxComponent" parent="." index="6"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_rna0h")
debug_color = Color(0.94289, 0.104585, 0.537062, 0.42)

[node name="HitboxComponent" parent="." index="7"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_ntlra")

[node name="States" type="Node" parent="." index="11"]

[node name="MoveSideState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("4_2dgjk")
duration = 5.0

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("5_tbifn")
actor = NodePath("../../..")

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("6_qg7qm")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="MoveDownState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("4_2dgjk")

[node name="MoveComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("5_tbifn")
actor = NodePath("../../..")
velocity = Vector2(0, 50)

[node name="PauseState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("4_2dgjk")

[node name="FireRateTimer" type="Timer" parent="." index="12"]
unique_name_in_owner = true
wait_time = 1.392
autostart = true

[node name="ProjectileSpawnerComponent" type="Node2D" parent="." index="13"]
unique_name_in_owner = true
position = Vector2(0, 22)
script = ExtResource("7_fmhu6")
scene = ExtResource("8_ppyc4")

[node name="CenterMuzzle" type="Marker2D" parent="." index="14"]
